-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.11.0, Lustre 2.12.0
-
None
-
3
-
9223372036854775807
In lustre-rsync-test test_1A, we do some file system operations including creating a hard link, call lustre_rsync, do more operations and call lustre_rsync again using the log (-l option) from the first call to lustre_rsync. On the second lustre_rsync, we can see in the client test_log that we get an error:
Replication #2 Replication of operation failed(-1): 25 HLINK (3) [0x200012ce9:0x1c:0x0] [0x200012ce9:0x12:0x0] link2 Lustre filesystem: lustre MDT device: lustre-MDT0000 Source: /mnt/lustre Target: /tmp/target Target: /tmp/target2 Statuslog: /tmp/lustre_rsync.log Changelog registration: cl1 Starting changelog record: 0 Clear changelog after use: no Errors: 1
In the debug log, we see that there is no issue with replicating the hard link the first time we call lustre_rsync:
***** Start 25 HLINK (3) [0x200012ce9:0x1c:0x0] [0x200012ce9:0x12:0x0] link2 ***** parent fid2path d1A.lustre-rsync-test/d1, link2, rc=0 link destination is /tmp/target/d1A.lustre-rsync-test/d1/link2 fid2path d1A.lustre-rsync-test/d1/link1, link2, 0 rc=0 link source is /tmp/target/d1A.lustre-rsync-test/d1/link1 link: /tmp/target/d1A.lustre-rsync-test/d1/link1 [to] /tmp/target/d1A.lustre-rsync-test/d1/link2; rc1=0 Success parent fid2path d1A.lustre-rsync-test/d1, link2, rc=0 link destination is /tmp/target2/d1A.lustre-rsync-test/d1/link2 fid2path d1A.lustre-rsync-test/d1/link1, link2, 0 rc=0 link source is /tmp/target2/d1A.lustre-rsync-test/d1/link1 link: /tmp/target2/d1A.lustre-rsync-test/d1/link1 [to] /tmp/target2/d1A.lustre-rsync-test/d1/link2; rc1=0 Success ##### End 25 HLINK (3) [0x200012ce9:0x1c:0x0] [0x200012ce9:0x12:0x0] link2 rc=0 #####
We get a failure on the second call to lustre_rsync
***** Start 25 HLINK (3) [0x200012ce9:0x1c:0x0] [0x200012ce9:0x12:0x0] link2 ***** parent fid2path d1A.lustre-rsync-test/d1, link2, rc=0 link destination is /tmp/target/d1A.lustre-rsync-test/d1/link2 fid2path d1A.lustre-rsync-test/d1/link1, link2, 0 rc=0 link source is /tmp/target/d1A.lustre-rsync-test/d1/link1 link: /tmp/target/d1A.lustre-rsync-test/d1/link1 [to] /tmp/target/d1A.lustre-rsync-test/d1/link2; rc1=-1 File exists parent fid2path d1A.lustre-rsync-test/d1, link2, rc=0 link destination is /tmp/target2/d1A.lustre-rsync-test/d1/link2 fid2path d1A.lustre-rsync-test/d1/link1, link2, 0 rc=0 link source is /tmp/target2/d1A.lustre-rsync-test/d1/link1 link: /tmp/target2/d1A.lustre-rsync-test/d1/link1 [to] /tmp/target2/d1A.lustre-rsync-test/d1/link2; rc1=-1 File exists ##### End 25 HLINK (3) [0x200012ce9:0x1c:0x0] [0x200012ce9:0x12:0x0] link2 rc=-1 #####
It is true that the file exists.
Unfortunately, we don’t check the “Errors” line from the output of lustre_rsync. So, test 1A does not fail.
Here is a link to a test session where we get errors on the second replication
https://testing.hpdd.intel.com/test_sets/d4f17fde-4d03-11e8-b45c-52540065bddc
- mentioned in
-
Page Loading...